fix(all): removed visibility CSS vars

--- a/src/patternfly/components/Divider/divider.scss
+++ b/src/patternfly/components/Divider/divider.scss
@@ -66,7 +66,6 @@ $pf-c-divider--spacer-map: build-spacer-map("none", "xs", "sm", "md", "lg", "xl"
   @include pf-hidden-visible(var(--pf-c-divider--Display));
   @include pf-c-divider--m-horizontal; // set to default to horizontal
 
-  display: var(--pf-c-divider--Display);
   flex-direction: var(--pf-c-divider--FlexDirection);
   align-items: center;
   align-self: stretch;
